[gd_scene load_steps=9 format=2]

[ext_resource path="res://main/main.gd" type="Script" id=1]
[ext_resource path="res://main/main.png" type="Texture" id=2]
[ext_resource path="res://main/title.png" type="Texture" id=3]
[ext_resource path="res://gui/pressed_stylebox.tres" type="StyleBox" id=4]
[ext_resource path="res://gui/disabled_stylebox.tres" type="StyleBox" id=5]
[ext_resource path="res://gui/hovered_stylebox.tres" type="StyleBox" id=6]
[ext_resource path="res://gui/default_stylebox.tres" type="StyleBox" id=7]
[ext_resource path="res://gui/fonts/PixelMplus12-Regular.tres" type="DynamicFont" id=8]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1009.0
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 16.0
margin_top = 69.0
margin_right = 1008.0
margin_bottom = 531.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_right = 992.0
margin_bottom = 224.0
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 992.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 64 )

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 416.0
margin_top = 296.0
margin_right = 576.0
margin_bottom = 326.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 7 )
text = "NEW GAME"

[node name="LoadGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 416.0
margin_top = 330.0
margin_right = 576.0
margin_bottom = 360.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 7 )
text = "LOAD GAME"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 416.0
margin_top = 364.0
margin_right = 576.0
margin_bottom = 394.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 4
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 7 )
text = "Exit"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 398.0
margin_right = 992.0
margin_bottom = 462.0
rect_min_size = Vector2( 0, 64 )

[connection signal="resized" from="." to="." method="_on_Main_resized"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
